--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
         "friendsofphp/php-cs-fixer": "^2.12"
     },
     "autoload": {
-        "psr-4": { "belenka\Everifin\\Client\\" : "lib/" }
+        "psr-4": { "belenka\\Everifin\\Client\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "belenka\Everifin\\Client\\Test\\" : "test/" }
+        "psr-4": { "belenka\\Everifin\\Client\\Test\\" : "test/" }
     }
 }
