--- a/composer.json
+++ b/composer.json
@@ -19,21 +19,24 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^8.1",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2",
+        "guzzlehttp/guzzle": "^7.0",
         "guzzlehttp/psr7": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0 || ^9.0",
-        "friendsofphp/php-cs-fixer": "^2.12"
+        "phpunit/phpunit": "^8.0 || ^9.0"
     },
     "autoload": {
-        "psr-4": { "belenka\\Everifin\\Client\\" : "lib/" }
+        "psr-4": {
+            "belenka\\Everifin\\Client\\": "lib/"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "belenka\\Everifin\\Client\\Test\\" : "test/" }
+        "psr-4": {
+            "belenka\\Everifin\\Client\\Test\\": "test/"
+        }
     }
 }
